--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -242,11 +242,13 @@ spa:
         # accountancy: "Comptabilité"
         # animal_farming: "Élevage bovins"
         # aromatic_and_medicinal_plants: "Plantes médicinales et aromatiques"
+        # beekeeping: "Apiculture"
         # beet_crops: "Betterave"
         # cattle_farming: "Élevage"
         # exploitation: "Exploitation"
         # fallow_land: "Jachère"
         # fish_farming: "Aquaculture"
+        # fodder_crops: "Culture fourragères"
         # goat_farming: "Élevage caprins"
         # handicraft: "Artisanat"
         # maize_crops: "Culture de maïs"
@@ -1020,6 +1022,7 @@ spa:
       items:
         # best_practices: "Bonnes pratiques"
         # regulations: "Réglementations"
+        # specifications: "Spécifications"
       # name: "Type de guides"
     indicators:
       attributes:
@@ -1064,6 +1067,7 @@ spa:
         cultural_plant_residue:
           choices:
             # buried: "Enfouis"
+            # burned: "Brûlés"
             # exported: "Exportés"
         cultural_soil_state:
           choices:
@@ -1731,6 +1735,7 @@ spa:
         # spring_barley_seed_25: "Semence d’orge de printemps - sac de 25kg"
         # sugar_vinasse: "Vinasse de sucrerie"
         # sunflower_crop: "Culture de tournesol"
+        # superficial_plow: "Cultipacker"
         # swamp_peaty_land_parcel: "Parcelle de marais tourbeux"
         # tablur_hard_wheat_crop: "Culture de blé dur Tablur"
         # tablur_hard_wheat_seed_25: "Semence de blé dur Tablur sac de 25kg"
@@ -1738,6 +1743,7 @@ spa:
         # temporary_meadow_crop: "Culture de prairie temporaire"
         # tractor: "Tracteur"
         # trailer: "Remorque"
+        # triticale_crop: "Culture de Triticale"
         # urban_compost: "Compost urbain"
         # valley_terrace_land_parcel: "Parcelle de sol de terrasse de vallée"
         # vine_grape_berry: "Grappe de raisin"
@@ -1846,17 +1852,25 @@ spa:
     production_natures:
       attributes:
         # activity: "Activité"
+        # production_code: "Code"
         # telepac_crop_code: "Code de type de culture TELEPAC"
-        # variant_crop: "variante de culture"
+        # variant_support: "Variant"
       choices: #?
       items:
         # annual_frost_fallow_land: "Gel annuel"
+        # calf: "Veau"
         # grain_corn: "Maïs grain"
+        # milk_bull_calf: "Taurillons Lait"
+        # milk_cattle: "Bovins Lait"
         # permanent_meadow: "Prairie permanente"
         # seed_corn: "Maïs semence"
         # silage_corn: "Maïs ensilage"
+        # sorghum: "Sorgho"
+        # spring_barley: "Orge de printemps"
         # sunflower: "Tournesol"
         # temporary_meadow: "Prairie temporaire"
+        # triticale: "Triticale"
+        # winter_barley: "Orge d'hiver"
         # winter_hard_wheat: "Blé dur d’hiver"
         # winter_soft_wheat: "Blé tendre d’hiver"
         # without_crop: "Hors culture"
