--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1531,7 +1531,7 @@ eng:
         # milk_production: "Production laitière"
         # oviparous_birth: "Reproduction (ovipare)"
         # plant_fertilisation: "Fertilisation"
-        # plant_illness_treatment: "Traitements phytosanitaires"
+        # plant_illness_treatment: "Protection des cultures"
         # plowing: "Labour"
         production: "Production" #?
         # raking: "Hersage"
