--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -1737,6 +1737,7 @@ spa:
     # to_deliver: "Livrer"
     # to_deposit: "À encaisser"
     # today: "Aujourd’hui"
+    # tool_evaluated_cost: "Coût outils"
     # tools: "Outils"
     # tools_list: "Liste d’outils"
     total: "Total"
