--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -1607,6 +1607,7 @@ jpn:
     # to_deliver: "Livrer"
     # to_deposit: "À encaisser"
     # today: "Aujourd’hui"
+    # tool_evaluated_cost: "Coût outils"
     # tools: "Outils"
     # tools_list: "Liste d’outils"
     # total: "Total"
