--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1446,7 +1446,7 @@ spa:
         # milk_production: "Production laitière"
         # oviparous_birth: "Reproduction (ovipare)"
         # plant_fertilisation: "Fertilisation"
-        # plant_illness_treatment: "Traitements phytosanitaires"
+        # plant_illness_treatment: "Protection des cultures"
         # plowing: "Labour"
         # raking: "Hersage"
         # soil_enrichment: "Amendement"
