Adds better guide management

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1090,6 +1090,7 @@ arb:
     # changes_reflected: "Changements répercutés"
     check: "نحقق"
     # check_fields: "Vous devez cocher au moins une case pour effectuer la modification"
+    # checked_at: "Vérifié le"
     # children: "Descendance"
     # childrens: "Enfants"
     # choice_options: "Indicateur avec liste de choix"
