--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -896,6 +896,7 @@ jpn:
     # changes_reflected: "Changements répercutés"
     # check: "Vérifier"
     # check_fields: "Vous devez cocher au moins une case pour effectuer la modification"
+    # checked_at: "Vérifié le"
     # children: "Descendance"
     # childrens: "Enfants"
     # choice_options: "Indicateur avec liste de choix"
