--- a/config/locales/jpn/procedures.yml
+++ b/config/locales/jpn/procedures.yml
@@ -64,7 +64,7 @@ jpn:
     # grinder: "Broyeur"
     # harrow: "Herse"
     # implanter_man: "Planteur"
-    # implanter_tool: "Equipement de plantation"
+    # implanter_tool: "Équipement de plantation"
     # land_parcel: "Parcelle"
     # mammal: "Animal à traire"
     # mammal_herd: "Troupeau à traire"
