--- a/config/locales/fra/prints/general_ledger.xml
+++ b/config/locales/fra/prints/general_ledger.xml
@@ -84,11 +84,10 @@
 		<groupHeader>
 			<band height="41">
 				<line>
-					<reportElement uuid="5abae6f2-281f-493a-b567-f347b80e42b3" x="-21" y="27" width="576" height="1" forecolor="#7F4D15"/>
+					<reportElement x="-21" y="27" width="576" height="1" forecolor="#7F4D15" uuid="5abae6f2-281f-493a-b567-f347b80e42b3"/>
 				</line>
 				<textField isBlankWhenNull="true">
-					<reportElement uuid="9fc53b49-b18c-4c89-90d6-761e73aa5efe" style="strong" mode="Transparent" x="5" y="6" width="203" height="20"/>
-					<textElement/>
+					<reportElement style="strong" mode="Transparent" x="5" y="6" width="340" height="20" uuid="9fc53b49-b18c-4c89-90d6-761e73aa5efe"/>
 					<textFieldExpression><![CDATA[$F{account_label}]]></textFieldExpression>
 				</textField>
 			</band>
@@ -96,20 +95,20 @@
 		<groupFooter>
 			<band height="42">
 				<staticText>
-					<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="10" y="10" width="121" height="20"/>
+					<reportElement style="label-strong" x="10" y="10" width="121" height="20" uuid="52d5043d-384e-4840-a3c3-eb48a3871d11"/>
 					<textElement verticalAlignment="Middle">
 						<font fontName="DejaVu Sans"/>
 					</textElement>
 					<text><![CDATA[Totaux  :]]></text>
 				</staticText>
 				<textField evaluationTime="Group" evaluationGroup="account" pattern="###0.00" isBlankWhenNull="true">
-					<reportElement uuid="b6d0c75f-3f1b-4e56-b1cc-00ccbf357120" x="391" y="10" width="56" height="20"/>
-					<textElement/>
+					<reportElement x="395" y="10" width="56" height="20" uuid="b6d0c75f-3f1b-4e56-b1cc-00ccbf357120"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$V{credit_1}]]></textFieldExpression>
 				</textField>
 				<textField evaluationTime="Group" evaluationGroup="account" pattern="###0.00" isBlankWhenNull="true">
-					<reportElement uuid="437422a6-84dc-4c9b-88fd-6ade5c9cabfc" x="345" y="10" width="46" height="20"/>
-					<textElement/>
+					<reportElement x="345" y="10" width="50" height="20" uuid="437422a6-84dc-4c9b-88fd-6ade5c9cabfc"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$V{debit_1}]]></textFieldExpression>
 				</textField>
 			</band>
@@ -121,14 +120,14 @@
 	<title>
 		<band height="38" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="5b202e71-e4a3-4be8-8dcb-f735cc04164a" style="strong" mode="Opaque" x="2" y="29" width="571" height="2" backcolor="#7C9DDD"/>
+				<reportElement style="strong" mode="Opaque" x="2" y="29" width="571" height="2" backcolor="#7C9DDD" uuid="5b202e71-e4a3-4be8-8dcb-f735cc04164a"/>
 				<textElement verticalAlignment="Middle">
 					<font pdfFontName="Times-Roman"/>
 				</textElement>
 				<text><![CDATA[]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="dc35e306-d03e-4288-b40e-74e3bb33d471" style="title" x="0" y="0" width="554" height="29"/>
+				<reportElement style="title" x="0" y="0" width="554" height="29" uuid="dc35e306-d03e-4288-b40e-74e3bb33d471"/>
 				<textElement>
 					<font fontName="Open Sans" size="16" pdfFontName="Times-Roman"/>
 				</textElement>
@@ -142,56 +141,56 @@
 	<columnHeader>
 		<band height="40" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="198" y="0" width="67" height="40"/>
+				<reportElement style="table-th" x="198" y="0" width="67" height="40" uuid="52d5043d-384e-4840-a3c3-eb48a3871d11"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[journal]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="1" y="0" width="130" height="40"/>
+				<reportElement style="table-th" x="1" y="0" width="130" height="40" uuid="52d5043d-384e-4840-a3c3-eb48a3871d11"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[écriture]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="131" y="0" width="67" height="40"/>
+				<reportElement style="table-th" x="131" y="0" width="67" height="40" uuid="52d5043d-384e-4840-a3c3-eb48a3871d11"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[date]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="264" y="0" width="81" height="40"/>
+				<reportElement style="table-th" x="264" y="0" width="81" height="40" uuid="52d5043d-384e-4840-a3c3-eb48a3871d11"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[pièce]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="345" y="0" width="46" height="40"/>
+				<reportElement style="table-th" x="345" y="0" width="46" height="40" uuid="52d5043d-384e-4840-a3c3-eb48a3871d11"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[débit]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="391" y="0" width="56" height="40"/>
+				<reportElement style="table-th" x="391" y="0" width="56" height="40" uuid="52d5043d-384e-4840-a3c3-eb48a3871d11"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[crédit]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="bdad3ca1-179e-4136-9b1e-bf4d6851a998" style="label-strong" x="447" y="0" width="46" height="40"/>
+				<reportElement style="table-th" x="447" y="0" width="47" height="40" uuid="bdad3ca1-179e-4136-9b1e-bf4d6851a998"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[débit cumulé]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="ddaed708-520c-4a0b-b8be-9bfcde3bf0e4" style="label-strong" x="494" y="0" width="60" height="40"/>
+				<reportElement style="table-th" x="494" y="0" width="60" height="40" uuid="ddaed708-520c-4a0b-b8be-9bfcde3bf0e4"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
@@ -202,59 +201,56 @@
 	<detail>
 		<band height="21" splitType="Stretch">
 			<textField pattern="###0.00" isBlankWhenNull="true">
-				<reportElement uuid="dba1a483-6562-4082-a5d2-a0dd845fe182" style="base" mode="Opaque" x="395" y="0" width="56" height="21"/>
+				<reportElement style="table-td" mode="Opaque" x="395" y="0" width="56" height="21" uuid="dba1a483-6562-4082-a5d2-a0dd845fe182"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{credit}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00" isBlankWhenNull="true">
-				<reportElement uuid="42865504-0435-4a06-9df0-2151563c4fea" style="base" mode="Opaque" x="349" y="0" width="46" height="21"/>
+				<reportElement style="table-td" mode="Opaque" x="349" y="0" width="46" height="21" uuid="42865504-0435-4a06-9df0-2151563c4fea"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{debit}]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="false">
-				<reportElement uuid="b8637e72-0dab-486c-980e-630dbe469547" style="base" mode="Opaque" x="198" y="0" width="67" height="21"/>
+				<reportElement style="table-td" mode="Opaque" x="198" y="0" width="70" height="21" uuid="b8637e72-0dab-486c-980e-630dbe469547"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{journal_name}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="a38d906a-cdce-41e6-8ec3-ca0b9b9f65b6" style="base" mode="Opaque" x="268" y="0" width="81" height="21"/>
+				<reportElement style="table-td" mode="Opaque" x="268" y="0" width="81" height="21" uuid="a38d906a-cdce-41e6-8ec3-ca0b9b9f65b6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Open Sans" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{entry_number}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="e39cad02-7296-4b15-be64-83e1005f9da2" style="Detail" mode="Opaque" x="1" y="0" width="130" height="21"/>
+				<reportElement style="table-td" mode="Opaque" x="1" y="0" width="130" height="21" uuid="e39cad02-7296-4b15-be64-83e1005f9da2"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{name}.toLowerCase()]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
-				<reportElement uuid="14106f98-080d-4ea6-9add-6ce992833746" style="base" mode="Opaque" x="131" y="0" width="67" height="21"/>
+				<reportElement style="table-td" mode="Opaque" x="131" y="0" width="67" height="21" uuid="14106f98-080d-4ea6-9add-6ce992833746"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{entry_printed-on}]]></textFieldExpression>
 			</textField>
-			<line>
-				<reportElement uuid="09a03d97-1c8c-4a8b-85a3-1868d25e2f8a" x="2" y="20" width="552" height="1"/>
-			</line>
 			<textField pattern="#,##0.00" isBlankWhenNull="true">
-				<reportElement uuid="866a80ea-bfc0-4037-88cb-2322a902423a" style="base" mode="Opaque" x="447" y="0" width="46" height="20"/>
+				<reportElement style="table-td" mode="Opaque" x="451" y="0" width="43" height="21" uuid="866a80ea-bfc0-4037-88cb-2322a902423a"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{cumulated-absolute-debit}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00" isBlankWhenNull="true">
-				<reportElement uuid="5bc1b13b-ee0b-4a6b-ac77-6686955890c6" style="base" mode="Opaque" x="494" y="1" width="61" height="19"/>
+				<reportElement style="table-td" mode="Opaque" x="494" y="0" width="61" height="21" uuid="5bc1b13b-ee0b-4a6b-ac77-6686955890c6"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans" size="9"/>
 				</textElement>
@@ -268,35 +264,28 @@
 	<pageFooter>
 		<band height="34" splitType="Stretch">
 			<textField evaluationTime="Report">
-				<reportElement uuid="50272410-1b25-4669-88c3-3be64f156f82" style="base" x="514" y="5" width="40" height="22" forecolor="#000000"/>
+				<reportElement style="base" x="514" y="5" width="40" height="22" forecolor="#000000" uuid="50272410-1b25-4669-88c3-3be64f156f82"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy HH.mm.ss">
-				<reportElement uuid="ebf60a3b-b81b-4ee3-b94d-a83ae04dd811" style="base" mode="Transparent" x="2" y="5" width="115" height="22" forecolor="#000000"/>
+				<reportElement style="base" mode="Transparent" x="2" y="5" width="115" height="22" forecolor="#000000" uuid="ebf60a3b-b81b-4ee3-b94d-a83ae04dd811"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="342f7ef7-5da8-4d85-baf2-2c7968aecaed" style="base" x="461" y="5" width="54" height="22" forecolor="#000000"/>
+				<reportElement style="base" x="461" y="5" width="54" height="22" forecolor="#000000" uuid="342f7ef7-5da8-4d85-baf2-2c7968aecaed"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}+" /"]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement uuid="3740387f-1656-45d4-b5a7-a671b9df52d6" style="strong" mode="Opaque" x="117" y="15" width="344" height="2" backcolor="#7C9DDD"/>
-				<textElement verticalAlignment="Middle">
-					<font pdfFontName="Times-Roman"/>
-				</textElement>
-				<text><![CDATA[]]></text>
-			</staticText>
 			<textField>
-				<reportElement uuid="bed30d3f-2abb-4bc2-a2c2-d4afdaa87984" style="address" x="174" y="1" width="224" height="33"/>
+				<reportElement style="address" x="174" y="1" width="224" height="33" uuid="bed30d3f-2abb-4bc2-a2c2-d4afdaa87984"/>
 				<textElement textAlignment="Center" verticalAlignment="Top"/>
 				<textFieldExpression><![CDATA[$F{address}]]></textFieldExpression>
 			</textField>
@@ -304,36 +293,29 @@
 	</pageFooter>
 	<lastPageFooter>
 		<band height="36">
-			<staticText>
-				<reportElement uuid="6a745fd5-25a2-4de3-87b6-1d920ef1a4c0" style="strong" mode="Opaque" x="117" y="15" width="344" height="2" backcolor="#7C9DDD"/>
-				<textElement verticalAlignment="Middle">
-					<font pdfFontName="Times-Roman"/>
-				</textElement>
-				<text><![CDATA[]]></text>
-			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement uuid="c5669d5d-31af-4dd7-bf88-534422b21b01" style="base" x="514" y="5" width="40" height="22" forecolor="#000000"/>
+				<reportElement style="base" x="514" y="5" width="40" height="22" forecolor="#000000" uuid="c5669d5d-31af-4dd7-bf88-534422b21b01"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy HH.mm.ss">
-				<reportElement uuid="a98f0540-b3f2-4380-aab0-f9d96ea72b6e" style="base" mode="Transparent" x="2" y="5" width="115" height="22" forecolor="#000000"/>
+				<reportElement style="base" mode="Transparent" x="2" y="5" width="115" height="22" forecolor="#000000" uuid="a98f0540-b3f2-4380-aab0-f9d96ea72b6e"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="5de70a0c-bd99-4937-84fa-c172a5df272f" style="base" x="461" y="5" width="54" height="22" forecolor="#000000"/>
+				<reportElement style="base" x="461" y="5" width="54" height="22" forecolor="#000000" uuid="5de70a0c-bd99-4937-84fa-c172a5df272f"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}+" /"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="54969179-47f0-402d-a856-b4ac17a0ad05" style="address" x="174" y="1" width="224" height="35"/>
+				<reportElement style="address" x="174" y="1" width="224" height="35" uuid="54969179-47f0-402d-a856-b4ac17a0ad05"/>
 				<textElement textAlignment="Center" verticalAlignment="Top"/>
 				<textFieldExpression><![CDATA[$F{address}]]></textFieldExpression>
 			</textField>
