--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -122,6 +122,7 @@ eng:
     backend/cells/elapsed_interventions_times_by_activities_cells: #?
     backend/cells/events_cells: #?
     backend/cells/expense_chart_cells: #?
+    backend/cells/guide_evolution_cells: #?
     backend/cells/last_document_archives_cells: #?
     backend/cells/last_entities_cells: #?
     backend/cells/last_events_cells: #?
