--- a/config/locales/arb/enumerize.yml
+++ b/config/locales/arb/enumerize.yml
@@ -46,6 +46,12 @@ arb:
         # graduated: "Dégressive"
         # linear: "Linéaire"
         # simplified_linear: "Linéaire simplifiée"
+    guide_analysis:
+      status:
+        # errored: "Erroné"
+        # failed: "Échoué"
+        # passed: "Passé"
+        # passed_with_warnings: "Passé avec remarques"
     intervention:
       state:
         # done: "Réalisée"
