--- a/config/locales/fra/enumerize.yml
+++ b/config/locales/fra/enumerize.yml
@@ -45,6 +45,12 @@ fra:
         graduated: "Dégressive"
         linear: "Linéaire"
         simplified_linear: "Linéaire simplifiée"
+    guide_analysis:
+      status:
+        errored: "Erroné"
+        failed: "Échoué"
+        passed: "Passé"
+        passed_with_warnings: "Passé avec remarques"
     intervention:
       state:
         done: "Réalisée"
